--- a/about.html
+++ b/about.html
@@ -17,14 +17,14 @@
 
 <body>
     <header class="about-page">
-        <nav class="grid nav-grid-master about-page">
-            <a href="index.html" class="nav-item logo-text about-page">
+        <nav class="grid nav-grid-master">
+            <a href="index.html" class="nav-item logo-text">
                 Luke Do
             </a>
-            <div class="nav-grid-text grid nav-button add-gutters">
-                <a href="index.html#Featured_Project" class="nav-item about-page">Projects</a>
-                <a href="about.html" class="nav-item about-page">About</a>
-                <a href="https://drive.google.com/file/d/17OchuMNCaB25i6yf3QYvr14KSTwDGREo/view?usp=sharing" class="nav-item about-page" target="_blank">Resume</a>
+            <div class="nav-grid-text grid nav-button nav-gutter">
+                <a href="index.html#Featured_Project" class="nav-item">Projects</a>
+                <a href="about.html" class="nav-item">About</a>
+                <a href="https://drive.google.com/file/d/17OchuMNCaB25i6yf3QYvr14KSTwDGREo/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
             </div>
 
         </nav>
@@ -78,7 +78,7 @@
         <div class="separating-line"></div>
         <div class=" grid nav-grid-master">
             <h4 class="footer-msg">Designed and coded by me :D with the help of city pop, cameras and anime.</h4>
-            <div class="nav-grid-text grid nav-button add-gutters">
+            <div class="nav-grid-text grid nav-button nav-gutter">
                 <a href="mailto:lukedo2111@gmail.com" class="footer-link">Email</a>
                 <a href="https://www.linkedin.com/in/luke-do-284073216/" class="footer-link" target="_blank">LinkedIn</a>
                 <a href="https://www.instagram.com/lukex1a/" class="footer-link" target="_blank">Instagram</a>
