--- a/fureverhome.html
+++ b/fureverhome.html
@@ -21,13 +21,12 @@
                 <a href="index.html" class="nav-item logo-text">
                     Luke Do
                 </a>
-
-                <div class="nav-grid-text grid nav-button add-gutters">
+                <div class="nav-grid-text grid nav-button nav-gutter">
                     <a href="index.html#Featured_Project" class="nav-item">Projects</a>
                     <a href="about.html" class="nav-item">About</a>
                     <a href="https://drive.google.com/file/d/17OchuMNCaB25i6yf3QYvr14KSTwDGREo/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
                 </div>
-
+    
             </nav>
             <section>
                 <div class="project-banner">
@@ -35,13 +34,13 @@
                         <img alt="Fureverhome Banner image" class="lazy js-off" src="img\fureverhome\FureverhomeBanner_100.webp"
                         data-src="img\fureverhome\FureverhomeBanner_400.webp"
                         data-srcset="img\fureverhome\FureverhomeBanner_400.webp 400w,
-                                     img\fureverhome\FureverhomeBanner_800.webp 800w,
+                                     img\fureverhome\FureverhomeBanner_600.webp 600w,
                                      img\fureverhome\FureverhomeBanner_1080.webp 1080w"
                         data-sizes="100w">
                         <noscript>
                             <img src="img\fureverhome\FureverhomeBanner_400.webp" alt="Fureverhome Banner image"
                             srcset="img\fureverhome\FureverhomeBanner_400.webp 400w,
-                                    img\fureverhome\FureverhomeBanner_800.webp 800w,
+                                    img\fureverhome\FureverhomeBanner_600.webp 600w,
                                     img\fureverhome\FureverhomeBanner_1080.webp 1080w" 
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
@@ -286,7 +285,7 @@
                 </div>
                 <figure class="project-img figure-analysis">
                     <video class="lazy js-off" width="1920" height="1080" data-src="img\fureverhome\fureverhome_pitch.mp4" src="img\fureverhome\FureverhomeBanner_100.webp" loop playsinline aria-label="FurEverHome's pitch video" controls="controls"></video>
-                    <img alt="After Effects puppet tool"class="lazy js-off" src="img/2021_Icebreaker/ayumi_hand_100.webp"
+                    <img alt="FurEverHome's pitch video thumbnail"class="lazy js-off" src="img\fureverhome\FureverhomeBanner_100.webp"
                     data-src="img\fureverhome\FureverhomeBanner_400.webp"
                     data-srcset="img\fureverhome\FureverhomeBanner_400.webp 400w,
                                  img\fureverhome\FureverhomeBanner_800.webp 800w,
@@ -399,13 +398,13 @@
             <div class="separating-line"></div>
             <div class=" grid nav-grid-master">
                 <h4 class="footer-msg">Designed and coded by me :D with the help of city pop, cameras and anime.</h4>
-                <div class="nav-grid-text grid nav-button add-gutters">
+                <div class="nav-grid-text grid nav-button nav-gutter">
                     <a href="mailto:lukedo2111@gmail.com" class="footer-link">Email</a>
                     <a href="https://www.linkedin.com/in/luke-do-284073216/" class="footer-link" target="_blank">LinkedIn</a>
                     <a href="https://www.instagram.com/lukex1a/" class="footer-link" target="_blank">Instagram</a>
                 </div>
             </div>
-        </footer>
+        </footer> 
         <script src="js/vanilla-lazyload.js"></script>
         <script src="js/scrollTrigger.js"></script>
     </body>
