Adding Passion Project page + Changes to nav /mobile view
- Adding passion project page under "play" section of the nav bar
- Renaming "works" file into said passion page
- Adjusting nav bar column for adding a new item
- Fixing images not loading on mobile on 88rising and fureverhome page
- Fixing nav bar regarding about page text not being black on hover

--- a/88rising.html
+++ b/88rising.html
@@ -21,11 +21,11 @@
                     Luke Do
                 </a>
                 <div class="nav-grid-text grid nav-button nav-gutter">
-                    <a href="index.html#Featured_Project" class="nav-item">Projects</a>
+                    <a href="index.html#Featured_Project" class="nav-item">Work</a>
+                    <a href="passion.html" class="nav-item">Play</a>
                     <a href="about.html" class="nav-item">About</a>
                     <a href="https://drive.google.com/file/d/17OchuMNCaB25i6yf3QYvr14KSTwDGREo/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
-                </div>
-    
+                </div>   
             </nav>
                 <section>
                     <div class="project-banner">
@@ -164,7 +164,7 @@
                     <img alt="88rising's experience design prototype walkthrough" class="lazy js-off" src="img\88rising\Thumbnail_100.webp"
                     data-src="img\88rising\Thumbnail_400.webp"
                     data-srcset="img\88rising\Thumbnail_400.webp 400w,
-                                    img\88rising\Thumbnail_800.webp 800w,
+                                    img\88rising\Thumbnail_600.webp 600w,
                                     img\88rising\Thumbnail_1080.webp 1080w"
                     data-sizes="100w">
 
@@ -172,7 +172,7 @@
                         <video src="img\88rising\walkthrough.mp4" loop playsinline aria-label="Character's Mask Off" controls="controls"></video> 
                         <img src="img\88rising\Thumbnail_400.webp" alt="88rising's experience design prototype walkthrough"
                         srcset="img\88rising\Thumbnail_400.webp 400w,
-                                img\88rising\Thumbnail_800.webp 800w,
+                                img\88rising\Thumbnail_600.webp 600w,
                                 img\88rising\Thumbnail_1080.webp 1080w" 
                         sizes="(min-width: 60rem) 50vw, 100vw"
                         >
@@ -313,13 +313,13 @@
             <div class="separating-line"></div>
             <div class=" grid nav-grid-master">
                 <h4 class="footer-msg">Designed and coded by me :D with the help of city pop, cameras and anime.</h4>
-                <div class="nav-grid-text grid nav-button nav-gutter">
+                <div class="footer-grid-text grid nav-button nav-gutter">
                     <a href="mailto:lukedo2111@gmail.com" class="footer-link">Email</a>
                     <a href="https://www.linkedin.com/in/luke-do-284073216/" class="footer-link" target="_blank">LinkedIn</a>
                     <a href="https://www.instagram.com/lukex1a/" class="footer-link" target="_blank">Instagram</a>
                 </div>
             </div>
-        </footer> 
+        </footer>    
         <script src="js/vanilla-lazyload.js"></script>
         <script src="js/scrollTrigger.js"></script>
     </body>
