--- a/fureverhome.html
+++ b/fureverhome.html
@@ -22,12 +22,13 @@
                     Luke Do
                 </a>
                 <div class="nav-grid-text grid nav-button nav-gutter">
-                    <a href="index.html#Featured_Project" class="nav-item">Projects</a>
+                    <a href="index.html#Featured_Project" class="nav-item">Work</a>
+                    <a href="passion.html" class="nav-item">Play</a>
                     <a href="about.html" class="nav-item">About</a>
                     <a href="https://drive.google.com/file/d/17OchuMNCaB25i6yf3QYvr14KSTwDGREo/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
-                </div>
-    
+                </div>   
             </nav>
+
             <section>
                 <div class="project-banner">
                     <figure>
@@ -288,7 +289,7 @@
                     <img alt="FurEverHome's pitch video thumbnail"class="lazy js-off" src="img\fureverhome\FureverhomeBanner_100.webp"
                     data-src="img\fureverhome\FureverhomeBanner_400.webp"
                     data-srcset="img\fureverhome\FureverhomeBanner_400.webp 400w,
-                                 img\fureverhome\FureverhomeBanner_800.webp 800w,
+                                 img\fureverhome\FureverhomeBanner_600.webp 600w,
                                  img\fureverhome\FureverhomeBanner_1080.webp 1080w"
                     data-sizes="100w">
 
@@ -296,7 +297,7 @@
                         <video src="img\fureverhome\fureverhome_pitch.mp4"  loop playsinline aria-label="FurEverHome's pitch video" controls="controls"></video> 
                         <img src="img\fureverhome\FureverhomeBanner_400.webp" alt="FurEverHome's pitch video"
                         srcset="img\fureverhome\FureverhomeBanner_400.webp 400w,
-                                 img\fureverhome\FureverhomeBanner_800.webp 800w,
+                                 img\fureverhome\FureverhomeBanner_600.webp 600w,
                                  img\fureverhome\FureverhomeBanner_1080.webp 1080w" 
                         sizes="(min-width: 74rem) 50vw, 100vw"
                         >
@@ -398,13 +399,13 @@
             <div class="separating-line"></div>
             <div class=" grid nav-grid-master">
                 <h4 class="footer-msg">Designed and coded by me :D with the help of city pop, cameras and anime.</h4>
-                <div class="nav-grid-text grid nav-button nav-gutter">
+                <div class="footer-grid-text grid nav-button nav-gutter">
                     <a href="mailto:lukedo2111@gmail.com" class="footer-link">Email</a>
                     <a href="https://www.linkedin.com/in/luke-do-284073216/" class="footer-link" target="_blank">LinkedIn</a>
                     <a href="https://www.instagram.com/lukex1a/" class="footer-link" target="_blank">Instagram</a>
                 </div>
             </div>
-        </footer> 
+        </footer>    
         <script src="js/vanilla-lazyload.js"></script>
         <script src="js/scrollTrigger.js"></script>
     </body>
