--- a/icebreaker.html
+++ b/icebreaker.html
@@ -22,11 +22,11 @@
                     Luke Do
                 </a>
                 <div class="nav-grid-text grid nav-button nav-gutter">
-                    <a href="index.html#Featured_Project" class="nav-item">Projects</a>
+                    <a href="index.html#Featured_Project" class="nav-item">Work</a>
+                    <a href="passion.html" class="nav-item">Play</a>
                     <a href="about.html" class="nav-item">About</a>
                     <a href="https://drive.google.com/file/d/17OchuMNCaB25i6yf3QYvr14KSTwDGREo/view?usp=sharing" class="nav-item" target="_blank">Resume</a>
-                </div>
-    
+                </div>   
             </nav>
 
             <section>
@@ -296,13 +296,13 @@
             <div class="separating-line"></div>
             <div class=" grid nav-grid-master">
                 <h4 class="footer-msg">Designed and coded by me :D with the help of city pop, cameras and anime.</h4>
-                <div class="nav-grid-text grid nav-button nav-gutter">
+                <div class="footer-grid-text grid nav-button nav-gutter">
                     <a href="mailto:lukedo2111@gmail.com" class="footer-link">Email</a>
                     <a href="https://www.linkedin.com/in/luke-do-284073216/" class="footer-link" target="_blank">LinkedIn</a>
                     <a href="https://www.instagram.com/lukex1a/" class="footer-link" target="_blank">Instagram</a>
                 </div>
             </div>
-        </footer> 
+        </footer>    
         <script src="js/vanilla-lazyload.js"></script>
         <script src="js/scrollTrigger.js"></script>
     </body>
