Content update for 88rising and minor fixes to Fureverhome
- Updated 88project to include UX Design Awards and changes to banner for said project so the UX Design banner fits correctly

- Update hero video to include more dynamic motion

- Fix inconsistencies in fureverhome low/high fidelity wireframe

- Added favicon for site

--- a/88rising.html
+++ b/88rising.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <title>88rising Experience Design | Luke Do</title>
-
+    <link rel="icon" type="image/x-icon" href="img/aboutMe/favicon.png">
     <link href="css/main_work.css" rel="stylesheet">
 
 </head>
@@ -28,19 +28,23 @@
                 </div>   
             </nav>
                 <section>
-                    <div class="project-banner">
+                    <div class="project-banner" id="rising-banner">
                         <figure>
                             <img alt="88rising Banner image" class="lazy js-off" src="img\88rising\Rising_banner_100.webp"
                             data-src="img\88rising\Rising_banner_400.webp"
                             data-srcset="img\88rising\Rising_banner_400.webp 400w,
                                         img\88rising\Rising_banner_600.webp 600w,
-                                        img\88rising\Rising_banner_1080.webp 1080w"
+                                        img\88rising\Rising_banner_1080.webp 1080w,
+                                        img\88rising\Rising_banner_1440.webp 1440w,
+                                        img\88rising\Rising_banner_2560.webp 2160w"
                             data-sizes="100w">
                             <noscript>
                                 <img src="img\88rising\Rising_banner_400.webp" alt="88rising Banner image"
                                 srcset="img\88rising\Rising_banner_400.webp 400w,
                                         img\88rising\Rising_banner_600.webp 600w,
-                                        img\88rising\Rising_banner_1080.webp 1080w" 
+                                        img\88rising\Rising_banner_1080.webp 1080w,
+                                        img\88rising\Rising_banner_1440.webp 1440w,
+                                        img\88rising\Rising_banner_2560.webp 2160w" 
                                 sizes="(min-width: 74rem) 50vw, 100vw"
                                 >
                             </noscript>
