--- a/fureverhome.html
+++ b/fureverhome.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
     <title>Fureverhome | Luke Do</title>
-
+    <link rel="icon" type="image/x-icon" href="img/aboutMe/favicon.png">
     <link href="css/main_work.css" rel="stylesheet">
 
 </head>
@@ -53,7 +53,7 @@
                     <div class="grid project-roles three-col-project-grid">
                         <div>
                             <h3>My Contribution</h3>
-                            <p>UX Researcher, UI Designer, Wireframe and Prototype</p>
+                            <p>UX Researcher and UX Designer</p>
                         </div>
                         <div>
                             <h3>Team</h3>
@@ -80,7 +80,7 @@
             <section class="project-analysis grid two-col-project-grid">
                 <div class="text-container">
                     <h3>The issue at hand</h3>
-                    <p>Approaching this project, my teammates and I first sought out research and journal articles, focusing on secondary research to familiarise ourselves with this domain and figure out if this is a domain we could potentially intervene and address with design. These articles pointed to resistance among potential and newly rescued dog owners with The Zebra’s survey noting <span>60% of adopted pets are returned or given away after 6 months, citing concerns about potential health risks and a lack of knowledge on how to effectively care for rescued pets.</span></p>
+                    <p>Approaching this project, my teammates and I first sought out research and journal articles, focusing on secondary research to familiarise ourselves with this domain and figure out if this is a domain we could potentially intervene and address with design. These articles pointed to resistance among potential and newly rescued dog owners with a survey done by Orvis and Spots noting <span>60% of adopted pets are returned or given away after 6 months, citing concerns about potential health risks and a lack of knowledge on how to effectively care for rescued pets.</span></p>
                 </div>
                 <div class="project-quotes">
                     <h4>"42.8% of pet owners favors shelter or rescue adoption for the chance to give second chances, however, <span>without proper guidance and support, they may face challenges in ensuring successful and lasting adoptions</span>"</h4>
