--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 
     <title>Home | Luke Do</title>
-
+    <link rel="icon" type="image/x-icon" href="img/aboutMe/favicon.png">
     <link href="css/main_work.css" rel="stylesheet">
 
 </head>
