Revamped 88rising project and added new passion project items
Revamped 88rising project:
- added initial iterations
- hero video adjustments both in case study and in index
- more in depth touchpoints explaination
- bad mermaid and dak coffee passion project
- Small edit to Fureverhome persona descriptions
- Change bio image back to old photo

--- a/about.html
+++ b/about.html
@@ -48,17 +48,17 @@
         <section class="main-banner">
             <div class="grid main-banner-2c add-gutters about-img left-banner">
                 <figure class="main-about-page">
-                    <img alt="Luke Do's Bio Photo" class="lazy js-off" src="img\aboutMe\cameraPhoto_100.png"
-                    data-src="img\aboutMe\cameraPhoto_400.png"
-                    data-srcset="img\aboutMe\cameraPhoto_400.png 400w,
-                                img\aboutMe\cameraPhoto_800.png 800w,
-                                img\aboutMe\cameraPhoto_ 1080.png 1080w"
+                    <img alt="Luke Do's Bio Photo" class="lazy js-off" src="img\aboutMe\Bio_100.jpg"
+                    data-src="img\aboutMe\Bio_400.jpg"
+                    data-srcset="img\aboutMe\Bio_400.jpg 400w,
+                                img\aboutMe\Bio_800.jpg 800w,
+                                img\aboutMe\Bio_1080.jpg 1080w"
                     data-sizes="100w" width="1080">
                     <noscript>
-                        <img src="img\aboutMe\cameraPhoto_100.png" alt="Luke Do's Bio Photo"
-                            srcset="img\aboutMe\cameraPhoto_400.png 400w,
-                                    img\aboutMe\cameraPhoto_800.png 800w,
-                                    img\aboutMe\cameraPhoto_ 1080.png 1080w"
+                        <img src="img\aboutMe\Bio_100.jpg" alt="Luke Do's Bio Photo"
+                            srcset="img\aboutMe\Bio_400.jpg 400w,
+                                    img\aboutMe\Bio_800.jpg 800w,
+                                    img\aboutMe\Bio_1080.jpg 1080w"
                             sizes="(min-width: 74rem) 50vw, 100vw" width="1080" height="1080">
                     </noscript>
                 </figure>    
