--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <h4>Hi there,</h4>
             <div class="grid main-banner-2c add-gutters">
                 <div class="left-banner">
-                    <h1>Luke is a creative designer who brings static images to life through motion and interactive design, <a href="about.html" class="in-text-link" id="banner-text"> by day.</a></h1>
+                    <h1>Luke is a creative UX and digital designer who brings static images to life through motion and interactive design, <a href="about.html" class="in-text-link" id="banner-text"> by day.</a></h1>
                 </div>
                 <div class="right-banner">
                     <p><span>Currently seeking new opportunities</span></p>
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div id="hero-video">
-                <video class="lazy js-off" width="1920" height="960" data-src="img\aboutMe\HeroVid.webm" src="img/summerfest/SummerFest_100.webp" autoplay loop playsinline muted aria-label="SFU Summer Festival's 10th Anniversary Teaser Thumbnail"> </video>
+                <video class="lazy js-off" width="1920" height="960" data-src="img\aboutMe\HeroVid.webm" src="img/summerfest/SummerFest_100.webp" autoplay loop playsinline muted aria-label="Hero Video"> </video>
             </div>
         </section>
     </header>
