--- a/passion.html
+++ b/passion.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
-    <title>Works | Luke Do</title>
+    <title>Archive | Luke Do</title>
     <link rel="icon" type="image/x-icon" href="img/aboutMe/favicon.png">
     <link href="css/main_work.css" rel="stylesheet">
 
@@ -54,7 +54,7 @@
             <div class="grid project-roles three-col-project-grid">
                 <div>
                     <h3>Skills developed</h3>
-                    <p>Graphic Design, Motion Design</p>
+                    <p>UX Design, Website Design, Graphic Design, Motion Design</p>
                 </div>
                 <div>
                     <h3>Project Type</h3>
@@ -70,8 +70,26 @@
     
     <main>
         <div class="separating-line"></div>
-
         <div class="grid two-col-project-grid add-gutters">
+            <figure class="project-img figure-analysis">
+                <video class="lazy js-off" width="1920" height="1080" data-src="img/otherProjects/Misc/Badmermaid.webm" src="img/otherProjects/Misc/Badmermaid_100.webp" autoplay loop playsinline muted aria-label="Bad Mermaid Website Redesign"></video>
+                <img alt="Bad Mermaid Website Redesign"class="lazy js-off" src="img/otherProjects/Misc/Badmermaid_100.webp"
+                data-src="img/otherProjects/Misc/Badmermaid_400.webp"
+                data-srcset="img/otherProjects/Misc/Badmermaid_400.webp 400w,
+                             img/otherProjects/Misc/Badmermaid_800.webp 600w"
+                data-sizes="100w">
+
+                <noscript>
+                    <video src="img/otherProjects/Misc/Badmermaid.webm" autoplay loop playsinline muted aria-label="Bad Mermaid Website Redesign"></video> 
+                    <img src="img/otherProjects/Misc/Barmaid_100.webp" alt="Bad Mermaid Website Redesign"
+                    srcset="img/otherProjects/Misc/Badmermaid_400.webp 400w,
+                            img/otherProjects/Misc/Badmermaid_800.webp 600w" 
+                    sizes="(min-width: 74rem) 50vw, 100vw"
+                    >
+                </noscript>
+                <figcaption class="caption-analysis"><a href="https://www.badmermaid.com/" class="in-text-link" target="_blank">Bad Mermaid</a> Website Redesign</figcaption>
+            </figure>
+
             <figure class="figure-analysis project-img">
                 <video class="lazy js-off" width="1920" height="1080" data-src="img/otherProjects/Misc/KAFU.webm" src="img/otherProjects/Misc/KAFU_fallback_100.webp" autoplay loop playsinline muted aria-label="A Fanmade Character Introduction Motion Graphics of KAFU from Kamitsubaki Studios" controls="controls">
                 </video>
@@ -91,6 +109,9 @@
                 </noscript>
                 <figcaption class="caption-analysis">A Fanmade Character Introduction Motion Graphics of <a href="https://musical-isotope.kamitsubaki.jp/" class="in-text-link" target="_blank"> KAFU (可不) from Kamitsubaki Studios</a></figcaption>
             </figure>
+        </div>
+
+        <div class="grid two-col-project-grid add-gutters">
             <figure class="project-img figure-analysis">
                 <video class="lazy js-off" width="1920" height="1080" data-src="img/otherProjects/SFUAni/Spring2021_ClubsDay.webm" src="img/otherProjects/SFUAni/Spring2021_ClubsDay_100.webp" autoplay loop playsinline muted aria-label="The Summer Festival 2019 Teaser"></video>
                 <img alt="Motion Graphic created for the SFU Anime Club's Clubs day in 2020"class="lazy js-off" src="img/otherProjects/SFUAni/Spring2021_ClubsDay_100.webp"
@@ -108,6 +129,23 @@
                     >
                 </noscript>
                 <figcaption class="caption-analysis">Motion Graphic created for the SFU Anime Club's Clubs day in 2020</figcaption>
+            </figure>
+            <figure class="figure-analysis project-img static-img">
+                <img alt="DAK Coffee Website Redesign" class="lazy js-off" src="img\otherProjects/Misc/DAKMockup_100.webp"
+                data-src="img\otherProjects/Misc/DAKMockup_400.webp"
+                data-srcset="img\otherProjects/Misc/DAKMockup_400.webp 400w,
+                             img\otherProjects/Misc/DAKMockup_800.webp 600w,
+                             img\otherProjects/Misc/DAKMockup_1080.webp 1080w"
+                data-sizes="100w">
+                <noscript>
+                    <img src="img\otherProjects/Misc/DAKMockup_400.webpp" alt="DAK Coffee Website Redesign"
+                    srcset="img\otherProjects/Misc/DAKMockup_400.webp 400w,
+                            img\otherProjects/Misc/DAKMockup_800.webp 600w,
+                            img\otherProjects/Misc/DAKMockup_1080.webp 1080w" 
+                    sizes="(min-width: 74rem) 50vw, 100vw"
+                    >
+                </noscript>
+                <figcaption class="caption-analysis">DAK Coffee Website Redesign <a href="https://www.figma.com/proto/Jz9071qlfdTVp4j5tZrPW2/Design-Dump?page-id=5%3A4200&node-id=251-435&viewport=1845%2C-505%2C0.08&t=O460aJUEUt1s5Tcx-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=251%3A435&show-proto-sidebar=1" class="in-text-link" target="_blank"> (click here to view the full project)</a></figcaption>
             </figure>
         </div>
 
