Minor fix to 88rising iteration photo and copy

--- a/88rising.html
+++ b/88rising.html
@@ -217,7 +217,7 @@
 
                 <div class="text-container">
                     <h3>88rising Wesbite</h3>
-                    <p>Additionally, 88rising’s current website only <span>focuses on merchandise sales, lacking any clarity on their current roster of artists</span>, what the brand is about, and any information about the personalities surrounding the brand. This makes it even harder for fans to truly jump down the rabbit hole and learn more about favorite artists and discover upcoming ones as well.</p>
+                    <p>Additionally, 88rising’s current website only <span>focuses on merchandise sales, lacking any clarity on their current roster of artists</span>, what the brand is about, and any information about the personalities surrounding the brand. This makes it even harder for fans to truly jump down the rabbit hole and learn more about their favorite artists and discover upcoming ones as well.</p>
                     </div>
             </section>
 
