updated linkedIn link and minor copy changes

--- a/88rising.html
+++ b/88rising.html
@@ -130,7 +130,7 @@
                 <div class="text-container">
                     <h2>User Research</h2>
                     <h3>The root of the issue</h3>
-                    <p>At the beginning of the project the team researched online for secondary data in combination with user interviews and surveys with <span>89 respondents</span> (1 over 88!!), ranging from casual to die-hard fans regarding their music-sharing habits, and their perception of 88rising and its artist roster.</p>
+                    <p>At the beginning of the project the team researched online for secondary data in combination with user interviews and surveys, where <span>I interviewed 89 participants</span> (1 over 88!!), ranging from casual to die-hard fans regarding their music-sharing habits, and their perception of 88rising and its artist roster.</p>
                     <p>These interviews pointed to a lack of awareness within the fanbase of 88rising’s frequent releases with <span>62% of respondents not aware of their monthly releases.</span> Another question that was brought up during the survey was if they agree that 88rising is declining in popularity, to which the majority of the survey respondents agreed. However, when asked the reason why, <span>41% of our casual fans respondents attributed it to the lack of engagement</span> from the brand themselves, despite having an interest in 88rising’s new talents and their signature sounds.</p>
                 </div>
                 <div class="project-quotes">
@@ -144,7 +144,7 @@
             <section class="project-analysis">
                 <div class="text-container">
                 <h3>Framing the issue</h3>
-                <p>After considering both the business and consumers’ perspectives, my teammates and I saw a missed opportunity for 88rising as many fans weren’t engaging and discovering more of 88rising’s roster due to many of their artists and collaborative content being scattered across different platforms. We believed that by <span>leveraging 88rising’s unique Asian American identity and collaborative works from diverse artists across different cultural backgrounds, we could help fans discover and connect more with artists and provide artists with a piece of the spotlight they have lacked until now.</span></p>
+                <p>After considering both the business and consumers’ perspectives, my teammates and I saw a missed opportunity for 88rising as many fans weren’t engaging and discovering more of 88rising’s roster due to many of their artists and collaborative content being scattered across different platforms. <span>As the decision maker for the team, I believed that by leveraging 88rising’s unique Asian American identity and collaborative works from diverse artists across different cultural backgrounds, we could help fans discover and connect more with artists and provide artists with a piece of the spotlight they have lacked until now.</span></p>
                 </div>
                 <figure class="project-img static-img figure-analysis">
                     <img alt="User Journey Map" class="lazy js-off" src="img/88rising/UserJourney_100.webp"
@@ -454,7 +454,7 @@
                 <h4 class="footer-msg">Designed and coded by me :D with the help of city pop, cameras and anime.</h4>
                 <div class="footer-grid-text grid nav-button nav-gutter">
                     <a href="mailto:lukedo2111@gmail.com" class="footer-link">Email</a>
-                    <a href="https://www.linkedin.com/in/luke-do-284073216/" class="footer-link" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/lukedo/" class="footer-link" target="_blank">LinkedIn</a>
                     <a href="https://www.instagram.com/lukex1a/" class="footer-link" target="_blank">Instagram</a>
                 </div>
             </div>
