--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
             <h4 class="footer-msg">Designed and coded by me :D with the help of city pop, cameras and anime.</h4>
             <div class="footer-grid-text grid nav-button nav-gutter">
                 <a href="mailto:lukedo2111@gmail.com" class="footer-link">Email</a>
-                <a href="https://www.linkedin.com/in/luke-do-284073216/" class="footer-link" target="_blank">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/lukedo/" class="footer-link" target="_blank">LinkedIn</a>
                 <a href="https://www.instagram.com/lukex1a/" class="footer-link" target="_blank">Instagram</a>
             </div>
         </div>
