--- a/fureverhome.html
+++ b/fureverhome.html
@@ -255,7 +255,7 @@
                     <div class="text-container">
                         <h3>User Testing and Addressing Issues</h3>
                         <p>To gain a better understanding of how users would approach FurEverHome, the team conducted in-person user testing with 8 people consisting of 2 primary users, 4 secondary users and 2 volunteers, asking them to perform a setlist of different tasks utilising observation and the think-aloud method in combination with questionnaires.</p>
-                        <p>However, after conducting these interviews, it was pointed out that while the features were well throught out, the prototype at that time still had issues with usability in parts of the UI and copywriting in the volunteer flow. After considering the user’s feedback, as a team, we made adjustments and fleshing out the UI even more with usability being our top priority and improving on the copywriting to better communicate to users better. These changes led us to create our fully interactive prototype with 3 distinct user flows. Here I was in charge of primarily in charge of prototyping the secondary user flow as well as helping my teammates prototype the primary and volunteer user flow</p>
+                        <p>However, after conducting these interviews, it was pointed out that while the features were well throught out, the prototype at that time still had issues with usability in parts of the UI and copywriting in the volunteer flow. After considering the user’s feedback, as a team, we made adjustments and fleshing out the UI even more with usability being our top priority and improving on the copywriting to better communicate to users better. These changes led us to create our fully interactive prototype with 3 distinct user flows. <span> Here I was in charge of primarily in charge of prototyping the prospective user flow as well as helping my teammates prototype the primary and volunteer user flow </span></p>
                     </div>
 
                     <figure class="project-img static-img figure-analysis">
@@ -401,7 +401,7 @@
                 <h4 class="footer-msg">Designed and coded by me :D with the help of city pop, cameras and anime.</h4>
                 <div class="footer-grid-text grid nav-button nav-gutter">
                     <a href="mailto:lukedo2111@gmail.com" class="footer-link">Email</a>
-                    <a href="https://www.linkedin.com/in/luke-do-284073216/" class="footer-link" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/lukedo/" class="footer-link" target="_blank">LinkedIn</a>
                     <a href="https://www.instagram.com/lukex1a/" class="footer-link" target="_blank">Instagram</a>
                 </div>
             </div>
