--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <h1>Luke is a creative UX and digital designer who brings static images to life through motion and interactive design, <a href="about.html" class="in-text-link" id="banner-text"> by day.</a></h1>
                 </div>
                 <div class="right-banner">
-                    <p><span>Currently seeking new opportunities</span></p>
+                    <p><span>Currently @Kardium</span></p>
                     <p>Previously @Fraser Health and @SFU Summer Festival</p>
                     <p>Based in Vancouver, BC</p> 
                 </div>
