--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                     <h1>Luke is a creative UX and digital designer who brings static images to life through motion and interactive design, <a href="about.html" class="in-text-link" id="banner-text"> by day.</a></h1>
                 </div>
                 <div class="right-banner">
-                    <p><span>Currently @Kardium</span></p>
-                    <p>Previously @Fraser Health and @SFU Summer Festival</p>
+                    <p><span>UX/UI Designer @Kardium</span></p>
+                    <p>Formerly @Fraser Health and @SFU Summer Festival</p>
                     <p>Based in Vancouver, BC</p> 
                 </div>
             </div>
